# UsersAPI

./: .dockerignore  Taskfile.yml  docker-compose.yml  main.py  pyproject.toml
app/: app.py  settings.py
src/api/: deps.py  endpoints.py  schemas.py  service.py
src/api/auth/: endpoints.py  schemas.py  service.py
src/api/users/: deps.py  endpoints.py  schemas.py  service.py
src/core/: app.py  auth.py  error_hanlers.py  settings.py
src/services/: cognito_schemas.py  cognito_service.py
